<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/log">

    <EditText

        android:id="@+id/idEdtLoginEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_white"
        android:hint="Enter Email-Address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@id/textViewButtonsGuidelineEnd"
        app:layout_constraintStart_toStartOf="@id/textViewButtonsGuidelineStart"
        app:layout_constraintTop_toBottomOf="@id/guidelineMiddlescreen" />

    <EditText
        android:id="@+id/idEdtLoginPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corners_white"
        android:hint="Enter Password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@id/textViewButtonsGuidelineEnd"
        app:layout_constraintStart_toStartOf="@id/textViewButtonsGuidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/idEdtLoginEmail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/idLoginBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/royal"
        android:padding="10dp"
        android:text="Login"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="@id/textViewButtonsGuidelineEnd"
        app:layout_constraintStart_toStartOf="@id/textViewButtonsGuidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/idEdtLoginPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/idRegisterBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/royal"
        android:padding="10dp"
        android:text="Register"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="@id/textViewButtonsGuidelineEnd"
        app:layout_constraintStart_toStartOf="@id/textViewButtonsGuidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/idLoginBtn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/idforgotpasswordbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:text="Forgot Password"
        android:textColor="#16215E"
        app:layout_constraintBottom_toTopOf="@+id/parentGuidelinebottom"
        app:layout_constraintEnd_toEndOf="@+id/idRegisterBtn"
        app:layout_constraintStart_toStartOf="@+id/idRegisterBtn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/logoGuidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/logoGuidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/logoGuidelineTopVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/parentGuidelinebottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/textViewButtonsGuidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/textViewButtonsGuidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMiddlescreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".4" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/idforgotpasswordbtn"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="LOGIN"
        android:textColor="#67379B"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/idforgotpasswordbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.302" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
