<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/idMenuHamburguer"
        android:title=""
        android:icon="@drawable/ic_baseline_menu_24"
        app:showAsAction="always">

        <menu>
            <item
...
            <item
                android:id="@+id/idMenuOrders"
                android:title="Shipping Orders"
                android:icon="@drawable/ic_baseline_shopping_cart_24"/>
            <item
                android:id="@+id/idMenuPurchaseOrders"
                android:title="Purchase Orders"
                android:icon="@drawable/ic_money_24"
                />
            <item
                android:id="@+id/idMenuReceiving"
                android:title="Receiving"
                android:icon="@drawable/_726506_truck_icon"/>
...
